--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,3 +1,4 @@
 $section-color-1: #282A3F;
-$text-header-green: rgb(90, 220, 90);
+$text-header-green: #358235;
 $text-secondary: #E0B028;
+$body-color: #f6fcf8;
